<resources>

    <!-- General -->
    <string name="app_name" translatable="false">Notes</string>
    <string name="fab_desc" translatable="false">Floating Action Button</string>

    <!-- General -->
    <string name="navigation_home_label">Notes (%1$d)</string>
    <string name="navigation_new_note_label">New note</string>
    <string name="navigation_edit_note_label">Edit note</string>
    <string name="navigation_settings_label">Settings</string>
    <string name="navigation_search_label">Search notes</string>

    <!-- Home fragment -->
    <string name="no_notes">No notes</string>
    <string name="fab_add_title">Create</string>
    <string name="rv_pinned_title">Pinned</string>
    <string name="rv_unpinned_title">Others</string>
    <string name="snackbar_note_deleted">Note deleted</string>
    <string name="snackbar_notes_deleted">%1$d notes deleted</string>

    <!-- App bar -->
    <string name="menu_note_delete">Delete</string>
    <string name="menu_selection_delete">Delete</string>
    <string name="menu_selection_pin">Pin note</string>
    <string name="menu_selection_select_all">Select all</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_search">Search</string>

    <!-- Add note fragment -->
    <string name="noteTitle">Title</string>
    <string name="noteBody">Text</string>
    <string name="createdOn">Created %1$s</string>
    <string name="editedOn">Edited %1$s</string>

    <!-- Search -->
    <string name="search_hint">Search notes</string>

    <!-- Preferences -->
    <string name="ui_header">UI</string>
    <string name="export_import_header">Export &amp; Import</string>
    <string name="about_header">About</string>

    <!-- View Mode -->
    <string name="view_mode_key" translatable="false">view_mode</string>
    <string name="view_mode_title">View mode</string>
    <string name="view_mode_description">List, Grid</string>
    <string name="view_mode_value_list" translatable="false">list</string>
    <string name="view_mode_value_grid" translatable="false">grid</string>
    <string name="view_mode_entry_list">List</string>
    <string name="view_mode_entry_grid">Grid</string>

    <!-- Theme -->
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_title">Theme</string>
    <string name="theme_description">System, Light, Dark</string>
    <string name="theme_value_system" translatable="false">system</string>
    <string name="theme_value_light" translatable="false">light</string>
    <string name="theme_value_dark" translatable="false">dark</string>
    <string name="theme_entry_system">System default</string>
    <string name="theme_entry_light">Light</string>
    <string name="theme_entry_dark">Dark</string>

    <!-- Language -->
    <string name="language_key" translatable="false">language</string>
    <string name="language_title">Language</string>
    <string name="language_description">Change the language of the app</string>
    <string name="language_value_system" translatable="false">system</string>
    <string name="language_value_en" translatable="false">en</string>
    <string name="language_value_fi" translatable="false">fi</string>
    <string name="language_entry_system">System default</string>
    <string name="language_entry_en">English</string>
    <string name="language_entry_fi">Finnish</string>

    <!-- Hide keyboard -->
    <string name="hide_keyboard_key" translatable="false">hide_keyboard</string>
    <string name="hide_keyboard_title">Hide keyboard</string>
    <string name="hide_keyboard_summary">Do not automatically show keyboard on edit screen</string>

    <!-- Show save FAB on edit screen -->
    <string name="show_save_fab_key" translatable="false">show_save_fab</string>
    <string name="show_save_fab_title">Show save FAB</string>
    <string name="show_save_fab_summary">The FAB is displayed on edit screen</string>

    <!-- Export database -->
    <string name="export_database_key" translatable="false">export_database</string>
    <string name="export_database_title">Export</string>
    <string name="export_database_summary">Notes to a file</string>
    <string name="export_database_successful">Notes exported. Restart app to apply changes</string>

    <!-- Import database -->
    <string name="import_database_key" translatable="false">import_database</string>
    <string name="import_database_title">Import</string>
    <string name="import_database_summary">Notes from a file</string>
    <string name="import_database_successful">Notes imported. Restart app to apply changes</string>

    <!-- About -->
    <string name="app_key" translatable="false">app</string>
    <string name="author_key" translatable="false">author</string>
    <string name="author_title">Developer</string>
    <string name="author_summary" translatable="false">Jankku</string>

    <string name="github_key" translatable="false">github</string>
    <string name="github_title" translatable="false">GitHub</string>
    <string name="github_summary" translatable="false">https://github.com/jankku/notes</string>

    <!-- Shortcuts -->
    <string name="add_note">Add note</string>

</resources>
