<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeFragment">

    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_push_pin"
        android:title="@string/menu_selection_pin"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/menu_selection_select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_selection_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>