<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeFragment">

            <TextView
                android:id="@+id/tvPinnedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/spacing_default"
                android:paddingTop="@dimen/spacing_default"
                android:text="@string/rv_pinned_title"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/rvPinnedNotes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPinnedNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/tvUnpinnedTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPinnedTitle" />

            <TextView
                android:id="@+id/tvUnpinnedTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/spacing_default"
                android:paddingTop="@dimen/spacing_default"
                android:text="@string/rv_unpinned_title"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/rvUnpinnedNotes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvPinnedNotes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUnpinnedNotes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUnpinnedTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/no_notes"
        layout="@layout/no_notes" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAdd"
        style="@style/Notes.Widget.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_desc"
        android:text="@string/fab_add_title"
        app:icon="@drawable/ic_add"
        app:layout_anchor="@id/nsvNotes"
        app:layout_anchorGravity="bottom|end" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>